# pantra

./: BCDLexer.g4  BCDParser.g4  LICENSE  MANIFEST.in  README.md  README.rst  fruits.py  manage.py  migrate.py  pantra.py  pyproject.toml  reference.md  requirements.txt  setup.py
apps/: config.py
apps/demo/: Main.html
apps/storage/: Main.html  StorageForm.html  StorageList.html  _StorageForm.html  _StorageList.html
apps/system/: Main.html
apps/test/: Main.html
apps/test2/: Main.html
apps/test3/: Main.html
apps/test5/: Main.html
apps/test6/: Main.html
apps/test7/: Main.html
cmd/: __main__.py  build.cmd
components/: DataTable.html  Main.html  Menu.html  MenuItem.html  _DataTable.html  bootstrap.html  html5.dtd
components/Actions/: Timer.html
components/Catalog/: CatalogList.html  UserList.html  __init__.py
components/DBTables/: DBTableForm.html  DBTableList.html  DBTableSelect.html  __init__.py
components/Dialogs/: Ask.html  Dialog.html  __init__.py
components/Entities/: CatalogList.html  CatalogSelect.html  DocumentList.html  UserList.html  __init__.py
components/Forms/: Button.html  CardForm.html  EntityForm.html  HelpMessage.html  InlineGroup.html  InputBox.html  InputField.html  InputPassword.html  InputText.html  RadioBox.html  RadioItem.html  SelectBox.html  SelectItem.html  ToolBox.html  ToolButton.html  ToolSpace.html  inputs.py
components/Layout/: Grid2.html  GridE.html  GridR.html  GridX.html  GridZ.html  MDI.html  SysTray.html  Taskbar.html  __init__.py  grids.py
components/Menu/: MenuGroup.html  MenuItem.html  PopupMenu.html  SideMenu.html
components/SVG/: SVG.html
components/Tables/: BaseTable.html  DBQueryTable.html  DataTable.html  EntityTable.html  FilterTable.html  FilterTableLine.html  Table.html  __init__.py  common.py
components/Widgets/: CellNumber.html  CellString.html  CheckField.html  DBField.html  DateField.html  DateTimeField.html  EntityField.html  EnumField.html  Field.html  Input.html  NumberField.html  SelectField.html  SingleInput.html  TextAreaField.html  TextField.html  TimeField.html  __init__.py  utils.py  validators.py
components/helpers/: db_tables.py  dialogs.py  layout.py  tables.py  widgets.py
core/: args.py  common.py  compiler.py  ctx.py  database.py  databases.xsd  dbtools.py  defaults.py  imports.py  main.py  management.py  model.xsd  models.py  models.xsd  oid.py  serializer.py  session.py  tracker.py  watchers.py  workers.py
core/components/: context.py  controllers.py  htmlnode.py  loader.py  render.py  update_dtd.py  watchdict.py
core/models/: __init__.py  django.py  parser.py  pony.py  runtime.py  (+2 more)
css/: basic.scss  common.scss  defaults.scss  forms.scss  mixins.scss  normalize.css  tables.scss
db/: models.py
docs/: requirements.txt
js/: bsdf.js  events.js  main.js  map.json  oid.js  serializer.js  ws.js  ws_client.js
lex/: PMLLexer.g4  PMLParser.g4  antlr.bat  update.bat
migrations/: 0001_initial.py  0002_2020-05-13_19-32-21.py  0003_2020-05-15_12-14-25.py
pages/: page.html
pantra/: __init__.py  args.py  cli4class.py  common.py  compiler.py  ctx.py  databases.xsd  defaults.py  imports.py  main.py  management.py  models.xsd  oid.py  patching.py  protocol.py  routes.py  serializer.py  session.py  session_storage.py  settings.py  settings.pyi  watchers.py  workers.py
pyx/: cyt.bat  cyt_gcc.bat  fruits.pyx  pantra.pyx
(+119 files in other folders)
